// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`appends classes 1`] = `
<div
  className="loader_9h6gj one two"
  style={
    Object {
      "color": "red",
    }
  }
/>
`;

exports[`getClasses merges classes passed in 1`] = `"loader_9h6gj one two"`;

exports[`getClasses returns default 1`] = `"loader_9h6gj"`;

exports[`overrides with theme 1`] = `
<div
  className="my theme"
  style={
    Object {
      "color": "red",
    }
  }
/>
`;

exports[`renders with props 1`] = `
<div
  className="loader_9h6gj"
  style={
    Object {
      "color": "red",
    }
  }
/>
`;
